# turboquantX

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: __init__.py  benchmark_google_parity.py  benchmark_perplexity.py  benchmark_quantizers.py  benchmark_speed.py  benchmark_vram.py
turboquantx/: __init__.py
turboquantx/backends/: __init__.py  optimizer.py
turboquantx/cache/: __init__.py  compressor.py  sparse_v.py
turboquantx/quantizers/: __init__.py  base.py  isoquant.py  planarquant.py  rotorquant.py  turboquant.py
turboquantx/utils/: __init__.py  bit_packing.py  codebook.py  profiler.py  registry.py
